# aipy-mcp-server

./: README.md  SKILL.md  pyproject.toml  server.py
