[project]
name = "aipy-mcp-server"
version = "0.2.0"
description = "MCP Server directly integrating AiPyPro kernel — AI-powered Python task execution (No Agents, Code is Agent)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "aipyapp",
]

[project.scripts]
aipy-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]

[tool.uv]
package = true

[tool.uv.sources]
aipyapp = { path = "/mnt/e/aipy/AiPyPro/resources/app.asar.unpacked/resources/aipyapp", editable = true }
